--- a/YTPLApp/Index.html
+++ b/YTPLApp/Index.html
@@ -2,11 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title></title>
+	<script type="text/javascript" src="Scripts/angular.min.js"></script>
+	<script type="text/javascript" src="Scripts/app.js"></script>
 </head>
 <body data-ng-app="app">
 
-	<form data-ng-controller="homeController" action="{{action_url}}" method="get">
-		<ul>
+	<!--<form data-ng-controller="homeController" action="{{action_url}}" method="get">-->
+	<form data-ng-submit="submit()" data-ng-controller="youTubeController">
+		<ul style="list-style: none;">
 			<li>
 				<label>Search YouTube by</label>
 				<input type="radio" name="youtubeType" data-ng-model="youtubeType" value="user" /><label>User</label>
@@ -16,35 +19,35 @@
 				<label>Query</label>
 				<input type="text" data-ng-model="youtubeQuery" />
 			</li>
-			<li>{{youtubeType}}</li>
-			<li>{{action_url}}</li>
 			<li>
-				<input type="submit" data-ng-click="validate()"/>
+				{{rootApiUrl}}
+				<input type="submit"/>
 			</li>
 		</ul>
 	</form>
 
+
+	<table border="1" style="width:100%;">
+		<thead>
+			<tr>
+				<th>Video</th>
+				<th>Description</th>
+				<th>Published</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr data-ng-repeat="result in results">
+				<td>
+					<!--<a href="{{result.Url}}" target="_blank">{{result.Title}}</a>-->
+					{{result.Url}}
+				</td>
+				<td></td>
+				<td></td>
+			</tr>
+		</tbody>
+		<tfoot>
+
+		</tfoot>
+	</table>
 </body>
-<script type="text/javascript" src="Scripts/angular.min.js"></script>
-<script type="text/javascript">
-	angular.module('app', [])
-		.controller('homeController', ['$scope', function ($scope) {
-
-			var rootApiUrl = 'api/YouTube/'
-
-			$scope.validate = function () {
-				if (($scope.youtubeQuery === undefined || scope.youtubeQuery === '') && ($scope.youtubeType === undefined || scope.youtubeType === ''))
-				{
-					$scope.action_url = rootApiUrl;
-				}
-			};
-
-			$scope.$watch('youtubeType', function () {
-				$scope.action_url = rootApiUrl + ($scope.youtubeType == "playlist" ? "GetVideoByPlaylist/" : "GetVideosByUser/").toString() + ($scope.youtubeQuery).toString();
-			})
-			$scope.$watch('youtubeQuery', function () {
-				$scope.action_url = rootApiUrl + ($scope.youtubeType == "playlist" ? "GetVideoByPlaylist/" : "GetVideosByUser/").toString() + ($scope.youtubeQuery).toString();
-			})
-	}]);
-</script>
 </html>
