--- a/YTPLApp/Index.html
+++ b/YTPLApp/Index.html
@@ -3,8 +3,8 @@
 <head>
     <title></title>
 
-    <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
+    <!--<link href="Content/bootstrap.min.css" rel="stylesheet" />-->
+    <!--<link href="Content/bootstrap-theme.min.css" rel="stylesheet" />-->
     <link href="//Microsoft.WinJS.2.0/css/ui-dark.css" rel="stylesheet" />
     
     <style type="text/css">
